variables.RunFour.scala.error
Compilation error:
RunFour:1: error: illegal start of simple pattern
var int b=0
         ^RunFour:2: error: '=' expected but ';' found.
while(b<=4){
^